--- a/src/main/resources/static/fxml/form-new-account.fxml
+++ b/src/main/resources/static/fxml/form-new-account.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -10,89 +11,113 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.CreateUserController">
     <children>
-        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="450.0" layoutY="57.0" prefHeight="50.0" prefWidth="180.0" text="Create a new account">
-            <font>
-                <Font size="15.0" />
-            </font>
-        </Label>
-        <HBox alignment="TOP_CENTER" layoutX="285.0" layoutY="162.0" prefHeight="399.0" prefWidth="510.0">
-            <children>
-                <VBox alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="100.0">
-                    <children>
-                        <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0">
-                            <children>
-                                <Label text="First name : " />
-                            </children>
+      <HBox alignment="CENTER" prefHeight="720.0" prefWidth="1080.0" styleClass="background" stylesheets="@../css/newAccount.css">
+         <children>
+            <VBox prefHeight="720.0" prefWidth="250.0">
+               <children>
+                  <Button id="button" fx:id="back" mnemonicParsing="false" onMouseClicked="#cancel" prefHeight="42.0" prefWidth="62.0" stylesheets="@../css/newAccount.css" text="Back" />
+               </children>
+               <HBox.margin>
+                  <Insets left="40.0" top="40.0" />
+               </HBox.margin>
+            </VBox>
+            <VBox alignment="CENTER">
+               <children>
+                  <VBox prefHeight="565.0" prefWidth="500.0" styleClass="container" stylesheets="@../css/newAccount.css">
+                     <children>
+                          <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="101.0" prefWidth="500.0" styleClass="welcome" stylesheets="@../css/newAccount.css" text="Create a new account">
+                              <font>
+                                  <Font size="15.0" />
+                              </font>
+                          </Label>
+                        <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="526.0" textAlignment="CENTER" textFill="#ae0000" />
+                          <HBox alignment="TOP_CENTER" prefHeight="312.0" prefWidth="500.0">
+                              <children>
+                                  <VBox alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="100.0">
+                                      <children>
+                                          <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0">
+                                              <children>
+                                                  <Label stylesheets="@../css/newAccount.css" text="First name : " />
+                                              </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0">
+                                              <children>
+                                                  <Label stylesheets="@../css/newAccount.css" text="Username : " />
+                                              </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0">
+                                              <children>
+                                                  <Label stylesheets="@../css/newAccount.css" text="Email : " />
+                                              </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0">
+                                              <children>
+                                                  <Label stylesheets="@../css/newAccount.css" text="Password : " />
+                                              </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0">
+                                              <children>
+                                                  <Label stylesheets="@../css/newAccount.css" text="Address : " />
+                                              </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0">
+                                              <children>
+                                                  <Label stylesheets="@../css/newAccount.css" text="ZIP Code : " />
+                                              </children>
+                                          </HBox>
+                                      </children>
+                                  </VBox>
+                                  <VBox alignment="CENTER_LEFT" prefHeight="310.0" prefWidth="354.0">
+                                      <children>
+                                          <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="362.0">
+                                              <children>
+                                                  <TextField fx:id="firstNameTextField" prefHeight="26.0" prefWidth="129.0" styleClass="textfield" stylesheets="@../css/newAccount.css" />
+                                                  <Label stylesheets="@../css/newAccount.css" text="     Last name :  " />
+                                                  <TextField fx:id="lastNameTextField" prefHeight="26.0" prefWidth="119.0" styleClass="textfield" stylesheets="@../css/newAccount.css" />
+                                              </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="362.0">
+                                              <children>
+                                                  <TextField fx:id="userNameTextField" prefHeight="26.0" prefWidth="129.0" styleClass="textfield" stylesheets="@../css/newAccount.css" />
+                                              </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="362.0">
+                                              <children>
+                                                  <TextField fx:id="emailTextField" prefHeight="26.0" prefWidth="208.0" styleClass="textfield" stylesheets="@../css/newAccount.css" />
+                                              </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="362.0">
+                                              <children>
+                                                  <TextField fx:id="passwordTextField" prefHeight="26.0" prefWidth="208.0" styleClass="textfield" stylesheets="@../css/newAccount.css" />
+                                              </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="395.0">
+                                              <children>
+                                                  <TextField fx:id="addressTextField" prefHeight="26.0" prefWidth="208.0" styleClass="textfield" stylesheets="@../css/newAccount.css" />
+                                              </children>
+                                          </HBox>
+                                          <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="395.0">
+                                              <children>
+                                                  <TextField fx:id="zipCodeTextField" prefHeight="26.0" prefWidth="102.0" styleClass="textfield" stylesheets="@../css/newAccount.css" />
+                                                  <Label stylesheets="@../css/newAccount.css" text="     City :  " />
+                                                  <TextField fx:id="cityTextField" prefHeight="26.0" prefWidth="180.0" styleClass="textfield" stylesheets="@../css/newAccount.css" />
+                                              </children>
+                                          </HBox>
+                                      </children>
+                                  </VBox>
+                              </children>
+                          </HBox>
+                        <HBox alignment="CENTER" prefHeight="84.0" prefWidth="500.0" spacing="40.0">
+                           <children>
+                                <Button fx:id="newAccountButton" mnemonicParsing="false" onMouseClicked="#submit" prefHeight="50.0" prefWidth="77.0" stylesheets="@../css/newAccount.css" text="Submit" />
+                           </children>
                         </HBox>
-                        <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0">
-                            <children>
-                                <Label text="Username : " />
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0">
-                            <children>
-                                <Label text="Email : " />
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0">
-                            <children>
-                                <Label text="Password : " />
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0">
-                            <children>
-                                <Label text="Address : " />
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="100.0">
-                            <children>
-                                <Label text="ZIP Code : " />
-                            </children>
-                        </HBox>
-                    </children>
-                </VBox>
-                <VBox alignment="CENTER_LEFT" prefHeight="310.0" prefWidth="354.0">
-                    <children>
-                        <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="362.0">
-                            <children>
-                                <TextField fx:id="firstNameTextField" prefHeight="26.0" prefWidth="129.0" />
-                                <Label text="     Last name :  " />
-                                <TextField fx:id="lastNameTextField" prefHeight="26.0" prefWidth="119.0" />
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="362.0">
-                            <children>
-                                <TextField fx:id="userNameTextField" prefHeight="26.0" prefWidth="129.0" />
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="362.0">
-                            <children>
-                                <TextField fx:id="emailTextField" prefHeight="26.0" prefWidth="208.0" />
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="362.0">
-                            <children>
-                                <TextField fx:id="passwordTextField" prefHeight="26.0" prefWidth="208.0" />
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="395.0">
-                            <children>
-                                <TextField fx:id="addressTextField" prefHeight="26.0" prefWidth="208.0" />
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="395.0">
-                            <children>
-                                <TextField fx:id="zipCodeTextField" prefHeight="26.0" prefWidth="102.0" />
-                                <Label text="     City :  " />
-                                <TextField fx:id="cityTextField" prefHeight="26.0" prefWidth="180.0" />
-                            </children>
-                        </HBox>
-                    </children>
-                </VBox>
-            </children>
-        </HBox>
-        <Button fx:id="newAccountButton" layoutX="513.0" layoutY="602.0" mnemonicParsing="false" onMouseClicked="#submit" text="Submit" />
-      <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="344.0" layoutY="142.0" prefHeight="18.0" prefWidth="444.0" textAlignment="CENTER" textFill="#ae0000" />
-      <Button fx:id="back" layoutX="84.0" layoutY="69.0" mnemonicParsing="false" onMouseClicked="#cancel" text="Back" />
+                     </children>
+                  </VBox>
+               </children>
+            </VBox>
+            <VBox prefHeight="200.0" prefWidth="290.0" />
+         </children>
+      </HBox>
     </children>
 </AnchorPane>
