--- a/src/main/resources/static/fxml/modifyAddress.fxml
+++ b/src/main/resources/static/fxml/modifyAddress.fxml
@@ -5,25 +5,39 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="394.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.ModifyAddressController">
     <children>
-        <Button fx:id="saveButton" layoutX="177.0" layoutY="210.0" mnemonicParsing="false" onMouseClicked="#submit" text="Save" />
-        <TextField fx:id="newCityTextField" layoutX="123.0" layoutY="109.0" />
-        <PasswordField fx:id="currentPW" layoutX="123.0" layoutY="168.0" />
-        <Label layoutX="135.0" layoutY="152.0" text="Enter your current password">
-            <font>
-                <Font size="10.0" />
-            </font>
-        </Label>
-        <Label fx:id="errorLabel" layoutX="181.0" layoutY="115.0">
-            <font>
-                <Font size="9.0" />
-            </font>
-        </Label>
-      <TextField fx:id="newZipCodeTextField" layoutX="123.0" layoutY="73.0" />
-      <TextField fx:id="newAddressTextField" layoutX="123.0" layoutY="33.0" />
+      <VBox alignment="CENTER" prefHeight="250.0" prefWidth="394.0">
+         <children>
+              <Label fx:id="errorLabel" alignment="CENTER" prefHeight="20.0" prefWidth="394.0" styleClass="error" stylesheets="@../css/modify.css">
+                  <font>
+                      <Font size="9.0" />
+                  </font>
+              </Label>
+            <HBox alignment="CENTER" prefHeight="205.0" prefWidth="394.0">
+               <children>
+                  <VBox alignment="CENTER" prefHeight="206.0" prefWidth="178.0" spacing="5.0">
+                     <children>
+                        <TextField fx:id="newAddressTextField" styleClass="textfield" stylesheets="@../css/modify.css" />
+                        <TextField fx:id="newZipCodeTextField" styleClass="textfield" stylesheets="@../css/modify.css" />
+                          <TextField fx:id="newCityTextField" styleClass="textfield" stylesheets="@../css/modify.css" />
+                          <Label alignment="CENTER" prefHeight="19.0" prefWidth="201.0" styleClass="enter" stylesheets="@../css/modify.css" text="Enter your current password">
+                              <font>
+                                  <Font size="10.0" />
+                              </font>
+                          </Label>
+                          <PasswordField fx:id="currentPW" styleClass="textfield" stylesheets="@../css/modify.css" />
+                          <Button fx:id="saveButton" mnemonicParsing="false" onMouseClicked="#submit" stylesheets="@../css/modify.css" text="Save" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
     </children>
 
 </AnchorPane>
