--- a/src/main/resources/static/fxml/modifyProfile.fxml
+++ b/src/main/resources/static/fxml/modifyProfile.fxml
@@ -5,22 +5,36 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="168.0" prefWidth="394.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.ModifyProfileController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="168.0" prefWidth="394.0" styleClass="background" stylesheets="@../css/modify.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.ModifyProfileController">
    <children>
-      <Button fx:id="saveButton" layoutX="179.0" layoutY="125.0" mnemonicParsing="false" onMouseClicked="#submit" text="Save" />
-      <TextField fx:id="newWhat" layoutX="123.0" layoutY="27.0" />
-      <PasswordField fx:id="currentPW" layoutX="124.0" layoutY="80.0" />
-      <Label layoutX="136.0" layoutY="65.0" text="Enter your current password">
-         <font>
-            <Font size="10.0" />
-         </font>
-      </Label>
-      <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="81.0" layoutY="110.0" prefHeight="14.0" prefWidth="236.0" textFill="RED">
-         <font>
-            <Font size="9.0" />
-         </font>
-      </Label>
+      <VBox layoutX="-1.0" prefHeight="168.0" prefWidth="394.0">
+         <children>
+            <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="34.0" prefWidth="394.0" styleClass="alert" stylesheets="@../css/modify.css" textFill="RED">
+               <font>
+                  <Font size="9.0" />
+               </font>
+            </Label>
+            <HBox alignment="CENTER" prefHeight="94.0" prefWidth="394.0">
+               <children>
+                  <VBox alignment="CENTER" prefHeight="168.0" prefWidth="191.0" spacing="5.0">
+                     <children>
+                        <TextField fx:id="newWhat" prefWidth="269.0" styleClass="textfield" stylesheets="@../css/modify.css" />
+                        <Label alignment="CENTER" prefHeight="19.0" prefWidth="226.0" styleClass="enter" stylesheets="@../css/modify.css" text="Enter your current password">
+                           <font>
+                              <Font size="10.0" />
+                           </font>
+                        </Label>
+                        <PasswordField fx:id="currentPW" styleClass="textfield" stylesheets="@../css/modify.css" />
+                        <Button fx:id="saveButton" mnemonicParsing="false" onMouseClicked="#submit" stylesheets="@../css/modify.css" text="Save" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
