--- a/src/main/resources/static/fxml/offerPage.fxml
+++ b/src/main/resources/static/fxml/offerPage.fxml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.OfferController">
+<AnchorPane fx:id="profileButton" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.OfferController">
 
     <fx:include source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
    <VBox layoutY="35.0" prefHeight="323.0" prefWidth="600.0">
@@ -65,6 +72,12 @@
                               <center>
                                  <Button fx:id="order" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#passOrder" text="Order" BorderPane.alignment="CENTER" />
                               </center>
+                              <right>
+                                 <Button fx:id="messageButton" mnemonicParsing="false" text="Message" BorderPane.alignment="CENTER" />
+                              </right>
+                              <left>
+                                 <Button mnemonicParsing="false" text="Profile" BorderPane.alignment="CENTER" />
+                              </left>
                            </BorderPane>
                         </children>
                      </VBox>
