--- a/src/main/resources/static/fxml/profileForOthers.fxml
+++ b/src/main/resources/static/fxml/profileForOthers.fxml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.ProfileForOthersController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.ProfileForOthersController">
         <fx:include fx:id="menuBar" source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
         <VBox layoutY="37.0" prefHeight="683.0" prefWidth="1080.0">
             <children>
@@ -83,12 +89,12 @@
                                 </HBox>
                             </content>
                         </TitledPane>
-                        <TitledPane animated="false" prefHeight="466.0" prefWidth="600.0" text="My orders ">
+                        <TitledPane animated="false" text="Available offers">
                             <VBox layoutY="135.0" prefHeight="582.0" prefWidth="1080.0">
                                 <children>
                                     <ScrollPane prefHeight="602.0" prefWidth="1080.0">
                                         <content>
-                                            <VBox fx:id="orderToAddOther" prefHeight="567.0" prefWidth="1078.0">
+                                            <VBox fx:id="offerToAddOther" prefHeight="567.0" prefWidth="1078.0">
                                                 <padding>
                                                     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                                 </padding>
@@ -98,12 +104,12 @@
                                 </children>
                             </VBox>
                         </TitledPane>
-                        <TitledPane animated="false" text="Available offers">
+                        <TitledPane animated="false" prefHeight="466.0" prefWidth="600.0" text="My orders ">
                             <VBox layoutY="135.0" prefHeight="582.0" prefWidth="1080.0">
                                 <children>
                                     <ScrollPane prefHeight="602.0" prefWidth="1080.0">
                                         <content>
-                                            <VBox fx:id="offerToAddOther" prefHeight="567.0" prefWidth="1078.0">
+                                            <VBox fx:id="orderToAddOther" prefHeight="567.0" prefWidth="1078.0">
                                                 <padding>
                                                     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                                 </padding>
