--- a/src/main/resources/static/css/orderViews.css
+++ b/src/main/resources/static/css/orderViews.css
@@ -4,3 +4,7 @@
     -fx-font-family: "Poppins", sans-serif;
 }
 
+.textfield{
+   -fx-border-color: transparent transparent #FEC89A transparent;
+   -fx-background-color: #ffffff;
+}
