--- a/src/main/resources/static/fxml/offerPage.fxml
+++ b/src/main/resources/static/fxml/offerPage.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -16,76 +15,77 @@
 <AnchorPane fx:id="profileButton" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.OfferController">
 
     <fx:include source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-   <VBox layoutY="35.0" prefHeight="323.0" prefWidth="600.0">
+   <HBox alignment="CENTER" layoutY="35.0" prefHeight="685.0" prefWidth="1080.0" style="-fx-background-color: white;" stylesheets="@../css/offer.css">
       <children>
-         <Label fx:id="offerPageTitle" alignment="CENTER" contentDisplay="CENTER" prefHeight="46.0" prefWidth="614.0" text="Title">
-            <font>
-               <Font name="System Bold" size="30.0" />
-            </font>
-            <VBox.margin>
-               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-            </VBox.margin>
-         </Label>
-         <HBox prefHeight="253.0" prefWidth="600.0">
+         <VBox alignment="CENTER" prefHeight="686.0" prefWidth="630.0">
             <children>
-               <ImageView fx:id="pageOfferImage" fitHeight="248.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-                  <HBox.margin>
-                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                  </HBox.margin>
-               </ImageView>
-               <HBox prefHeight="264.0" prefWidth="290.0">
+               <VBox styleClass="background" stylesheets="@../css/offer.css">
                   <children>
-                     <VBox prefHeight="264.0" prefWidth="297.0">
+                     <Label fx:id="offerPageTitle" alignment="CENTER" contentDisplay="CENTER" prefHeight="63.0" prefWidth="630.0" styleClass="title" stylesheets="@../css/offer.css" text="Title">
+                        <font>
+                           <Font name="System Bold" size="30.0" />
+                        </font>
+                     </Label>
+                     <HBox prefHeight="292.0" prefWidth="628.0" styleClass="offer" stylesheets="@../css/offer.css">
                         <children>
-                           <GridPane prefHeight="227.0" prefWidth="291.0">
-                             <columnConstraints>
-                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="102.00000762939453" />
-                               <ColumnConstraints hgrow="SOMETIMES" maxWidth="239.99999237060547" minWidth="10.0" prefWidth="187.99999237060547" />
-                             </columnConstraints>
-                             <rowConstraints>
-                               <RowConstraints maxHeight="82.4" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
-                                 <RowConstraints maxHeight="213.4" minHeight="10.0" prefHeight="30.399996185302726" vgrow="SOMETIMES" />
-                               <RowConstraints maxHeight="163.40000762939454" minHeight="8.999999999999993" prefHeight="24.800000000000004" vgrow="SOMETIMES" />
-                                 <RowConstraints maxHeight="213.4" minHeight="0.0" prefHeight="30.399996185302726" vgrow="SOMETIMES" />
-                               <RowConstraints maxHeight="219.6" minHeight="10.0" prefHeight="28.000003814697266" vgrow="SOMETIMES" />
-                                 <RowConstraints maxHeight="219.6" minHeight="10.0" prefHeight="52.80000000000001" vgrow="SOMETIMES" />
-                             </rowConstraints>
+                           <ImageView fx:id="pageOfferImage" fitHeight="248.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
+                              <HBox.margin>
+                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                              </HBox.margin>
+                           </ImageView>
+                           <HBox prefHeight="292.0" prefWidth="374.0">
                               <children>
-                                 <Label prefHeight="35.0" prefWidth="71.0" text="User :" />
-                                 <Label text="Availability :" GridPane.rowIndex="2" />
-                                 <Label text="Price :" GridPane.rowIndex="3" />
-                                 <Label text="Category :" GridPane.rowIndex="4" />
-                                 <Label text="Description : " GridPane.rowIndex="5" />
-                                 <Label fx:id="sellerId" onMouseClicked="#goToUserProfile" text="Label" GridPane.columnIndex="1" />
-                                 <Label fx:id="offerPageAvailability" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                 <Label fx:id="offerPagePrice" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                 <Label fx:id="offerPageCategory" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                                 <Label fx:id="offerPageDescription" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                                 <Label text="Zip Code :" GridPane.rowIndex="1" />
-                                 <Label fx:id="offerPageZipCode" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                 <VBox prefHeight="292.0" prefWidth="380.0">
+                                    <children>
+                                       <GridPane prefHeight="258.0" prefWidth="290.0">
+                                         <columnConstraints>
+                                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="103.19999999999999" />
+                                           <ColumnConstraints hgrow="SOMETIMES" maxWidth="278.20001220703125" minWidth="10.0" prefWidth="267.0" />
+                                         </columnConstraints>
+                                         <rowConstraints>
+                                           <RowConstraints maxHeight="82.4" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
+                                             <RowConstraints maxHeight="213.4" minHeight="10.0" prefHeight="30.399996185302726" vgrow="SOMETIMES" />
+                                           <RowConstraints maxHeight="163.40000762939454" minHeight="8.999999999999993" prefHeight="24.800000000000004" vgrow="SOMETIMES" />
+                                             <RowConstraints maxHeight="213.4" minHeight="0.0" prefHeight="28.79999389648438" vgrow="SOMETIMES" />
+                                           <RowConstraints maxHeight="219.6" minHeight="10.0" prefHeight="61.600006103515625" vgrow="SOMETIMES" />
+                                             <RowConstraints maxHeight="219.6" minHeight="10.0" prefHeight="53.600018310546886" vgrow="SOMETIMES" />
+                                         </rowConstraints>
+                                          <children>
+                                             <Label prefHeight="35.0" prefWidth="71.0" styleClass="left" stylesheets="@../css/myProfile.css" text="User :" />
+                                             <Label styleClass="left" stylesheets="@../css/myProfile.css" text="Availability :" GridPane.rowIndex="2" />
+                                             <Label styleClass="left" stylesheets="@../css/myProfile.css" text="Price :" GridPane.rowIndex="3" />
+                                             <Label styleClass="left" stylesheets="@../css/myProfile.css" text="Category :" GridPane.rowIndex="4" />
+                                             <Label styleClass="left" stylesheets="@../css/myProfile.css" text="Description : " GridPane.rowIndex="5" />
+                                             <Label fx:id="sellerId" onMouseClicked="#goToUserProfile" prefHeight="18.0" prefWidth="176.0" text="Label" GridPane.columnIndex="1" />
+                                             <Label fx:id="offerPageAvailability" prefHeight="18.0" prefWidth="110.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                             <Label fx:id="offerPagePrice" prefHeight="18.0" prefWidth="134.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                             <Label fx:id="offerPageCategory" prefHeight="18.0" prefWidth="263.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                             <Label fx:id="offerPageDescription" prefHeight="55.0" prefWidth="266.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                             <Label styleClass="left" stylesheets="@../css/myProfile.css" text="Zip Code :" GridPane.rowIndex="1" />
+                                             <Label fx:id="offerPageZipCode" prefHeight="18.0" prefWidth="80.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          </children>
+                                          <VBox.margin>
+                                             <Insets bottom="5.0" top="5.0" />
+                                          </VBox.margin>
+                                       </GridPane>
+                                    </children>
+                                 </VBox>
                               </children>
-                              <VBox.margin>
-                                 <Insets bottom="5.0" top="5.0" />
-                              </VBox.margin>
-                           </GridPane>
-                           <BorderPane prefHeight="26.0" prefWidth="291.0">
-                              <center>
-                                 <Button fx:id="order" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#passOrder" text="Order" BorderPane.alignment="CENTER" />
-                              </center>
-                              <right>
-                                 <Button fx:id="messageButton" mnemonicParsing="false" text="Message" BorderPane.alignment="CENTER" />
-                              </right>
-                              <left>
-                                 <Button mnemonicParsing="false" text="Profile" BorderPane.alignment="CENTER" />
-                              </left>
-                           </BorderPane>
+                           </HBox>
                         </children>
-                     </VBox>
+                     </HBox>
+                  </children>
+               </VBox>
+               <HBox alignment="CENTER" prefHeight="58.0" prefWidth="630.0" spacing="15.0">
+                  <children>
+                     <Button fx:id="goToProfile" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" stylesheets="@../css/offer.css" text="Profile" />
+                     <Button fx:id="order" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#passOrder" prefHeight="40.0" prefWidth="100.0" stylesheets="@../css/offer.css" text="Order" />
+                     <Button fx:id="messageButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" stylesheets="@../css/offer.css" text="Message" />
                   </children>
                </HBox>
             </children>
-         </HBox>
+         </VBox>
       </children>
-   </VBox>
+   </HBox>
 
 </AnchorPane>
