--- a/src/main/resources/static/fxml/orderView.fxml
+++ b/src/main/resources/static/fxml/orderView.fxml
@@ -14,7 +14,7 @@
     <children>
         <VBox fx:id="feedback" onMouseClicked="#getFeedback" prefHeight="128.0" prefWidth="558.0">
             <children>
-                <Label fx:id="commandUUID" prefHeight="36.0" prefWidth="382.0" stylesheets="@../css/orderView.css" text="Titre">
+                <Label fx:id="commandUUID" prefHeight="36.0" prefWidth="382.0" stylesheets="@../css/orderViews.css" text="Titre">
                     <font>
                         <Font name="System Bold" size="22.0" />
                     </font>
@@ -41,8 +41,8 @@
                                 <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <Label prefHeight="18.0" prefWidth="58.0" text="Seller :" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                <Label prefHeight="19.0" prefWidth="69.0" text="Description :" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <Label prefHeight="18.0" prefWidth="58.0" styleClass="left" stylesheets="@../css/offer.css" text="Seller :" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <Label prefHeight="18.0" prefWidth="94.0" styleClass="left" stylesheets="@../css/offer.css" text="Description :" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                 <Label fx:id="sellerLabel" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                                 <Label fx:id="costLabel" layoutX="84.0" layoutY="7.0" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                             </children>
