--- a/src/main/resources/static/fxml/orderViews.fxml
+++ b/src/main/resources/static/fxml/orderViews.fxml
@@ -6,21 +6,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="285.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.OrderController">
+<AnchorPane prefHeight="285.0" prefWidth="600.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.OrderController">
     <children>
-        <Button fx:id="valid" layoutX="258.0" layoutY="229.0" mnemonicParsing="false" onMouseClicked="#confirmOrder" prefHeight="34.0" prefWidth="84.0" text="Confirm" />
-        <PasswordField fx:id="currentPW" layoutX="225.0" layoutY="163.0" />
-        <Label layoutX="230.0" layoutY="148.0" text="Enter your password to confirm">
+        <Button fx:id="valid" layoutX="258.0" layoutY="229.0" mnemonicParsing="false" onMouseClicked="#confirmOrder" prefHeight="34.0" prefWidth="84.0" stylesheets="@../css/modify.css" text="Confirm" />
+        <PasswordField fx:id="currentPW" layoutX="225.0" layoutY="163.0" styleClass="textfield" stylesheets="@../css/orderViews.css" />
+        <Label alignment="CENTER" layoutX="213.0" layoutY="143.0" prefHeight="16.0" prefWidth="174.0" styleClass="enter" stylesheets="@../css/modify.css" text="Enter your password to confirm">
             <font>
                 <Font size="10.0" />
             </font>
         </Label>
-        <Label fx:id="errorLabel" alignment="CENTER" layoutX="133.0" layoutY="201.0" prefHeight="14.0" prefWidth="334.0">
+        <Label fx:id="errorLabel" alignment="CENTER" layoutX="133.0" layoutY="201.0" prefHeight="14.0" prefWidth="334.0" styleClass="error" stylesheets="@../css/modify.css">
             <font>
                 <Font size="9.0" />
             </font>
         </Label>
-        <Label fx:id="recap" alignment="CENTER" contentDisplay="CENTER" layoutX="77.0" layoutY="52.0" prefHeight="71.0" prefWidth="446.0" textAlignment="CENTER">
+        <Label fx:id="recap" alignment="CENTER" contentDisplay="CENTER" layoutX="77.0" layoutY="52.0" prefHeight="71.0" prefWidth="446.0" style="-fx-text-fill: #FEC89A;">
             <font>
                 <Font size="15.0" />
             </font>
