--- a/src/main/resources/static/fxml/profileForOthers.fxml
+++ b/src/main/resources/static/fxml/profileForOthers.fxml
@@ -14,9 +14,10 @@
         <fx:include fx:id="menuBar" source="layout.fxml" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
         <VBox layoutY="37.0" prefHeight="683.0" prefWidth="1080.0">
             <children>
-                <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="600.0">
+                <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="600.0" style="-fx-background-color: white;">
                     <children>
-                        <Label fx:id="balance" prefHeight="18.0" prefWidth="74.0" />
+               <Label fx:id="profileHeader" prefHeight="18.0" prefWidth="414.0" />
+                        <Label fx:id="balance" alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="628.0" />
                     </children>
                     <padding>
                         <Insets left="20.0" />
@@ -24,7 +25,7 @@
                 </HBox>
                 <Accordion prefHeight="639.0" prefWidth="1080.0">
                     <panes>
-                        <TitledPane animated="false" prefHeight="89.0" prefWidth="600.0" text="Profile">
+                        <TitledPane animated="false" prefHeight="89.0" prefWidth="600.0" styleClass="titledpane" stylesheets="@../css/myProfile.css" text="Profile">
                             <content>
                                 <HBox prefHeight="100.0" prefWidth="200.0">
                                     <children>
@@ -32,19 +33,19 @@
                                             <children>
                                                 <Pane prefHeight="30.0" prefWidth="165.0">
                                                     <children>
-                                                        <Label layoutX="166.0" layoutY="8.0" text="Username :" />
+                                                        <Label layoutX="166.0" layoutY="8.0" styleClass="left" stylesheets="@../css/myProfile.css" text="Username :" />
                                                     </children></Pane>
                                                 <Pane prefHeight="30.0" prefWidth="165.0">
                                                     <children>
-                                                        <Label layoutX="172.0" layoutY="8.0" text="ZIP Code :" />
+                                                        <Label layoutX="172.0" layoutY="8.0" styleClass="left" stylesheets="@../css/myProfile.css" text="ZIP Code :" />
                                                     </children></Pane>
                                                 <Pane prefHeight="30.0" prefWidth="165.0">
                                                     <children>
-                                                        <Label layoutX="199.0" layoutY="8.0" text="City :" />
+                                                        <Label layoutX="199.0" layoutY="8.0" styleClass="left" stylesheets="@../css/myProfile.css" text="City :" />
                                                     </children></Pane>
                                  <Pane layoutX="10.0" layoutY="101.0" prefHeight="30.0" prefWidth="165.0">
                                     <children>
-                                       <Label layoutX="143.0" layoutY="7.0" prefHeight="17.0" prefWidth="95.0" text="Average Marks :" />
+                                       <Label layoutX="143.0" layoutY="7.0" prefHeight="17.0" prefWidth="95.0" styleClass="left" stylesheets="@../css/myProfile.css" text="Average Mark :" />
                                     </children>
                                  </Pane>
                                             </children>
@@ -89,12 +90,12 @@
                                 </HBox>
                             </content>
                         </TitledPane>
-                        <TitledPane animated="false" text="Available offers">
+                        <TitledPane animated="false" styleClass="titledpane" stylesheets="@../css/myProfile.css" text="Available offers">
                             <VBox layoutY="135.0" prefHeight="582.0" prefWidth="1080.0">
                                 <children>
                                     <ScrollPane prefHeight="602.0" prefWidth="1080.0">
                                         <content>
-                                            <VBox fx:id="offerToAddOther" prefHeight="567.0" prefWidth="1078.0">
+                                            <VBox fx:id="offerToAddOther" prefHeight="567.0" prefWidth="1078.0" style="-fx-background-color: white;">
                                                 <padding>
                                                     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                                 </padding>
@@ -104,7 +105,7 @@
                                 </children>
                             </VBox>
                         </TitledPane>
-                        <TitledPane animated="false" prefHeight="466.0" prefWidth="600.0" text="My orders ">
+                        <TitledPane animated="false" prefHeight="466.0" prefWidth="600.0" styleClass="titledpane" stylesheets="@../css/myProfile.css" text="My orders ">
                             <VBox layoutY="135.0" prefHeight="582.0" prefWidth="1080.0">
                                 <children>
                                     <ScrollPane prefHeight="602.0" prefWidth="1080.0">
