--- a/src/main/resources/static/fxml/orderView.fxml
+++ b/src/main/resources/static/fxml/orderView.fxml
@@ -35,8 +35,8 @@
                               <GridPane prefHeight="88.0" prefWidth="439.0">
                                   <columnConstraints>
                                       <ColumnConstraints />
-                                      <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="274.0" minWidth="10.0" prefWidth="69.39999809265137" />
-                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="493.80000000000007" minWidth="10.0" prefWidth="289.00000190734863" />
+                                      <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="274.0" minWidth="10.0" prefWidth="87.6" />
+                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="493.80000000000007" minWidth="10.0" prefWidth="285.6" />
                                   </columnConstraints>
                                   <rowConstraints>
                                       <RowConstraints maxHeight="27.399998092651366" minHeight="0.0" prefHeight="1.286268234323984E-5" vgrow="SOMETIMES" />
