--- a/src/main/resources/static/fxml/convo.fxml
+++ b/src/main/resources/static/fxml/convo.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-
-
 <?import javafx.scene.layout.VBox?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.ConvController">
+
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.ConvController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="41.0" prefWidth="600.0" style="-fx-background-color: #f9dcc4;">
          <children>
@@ -23,11 +22,11 @@
       <HBox alignment="CENTER" layoutY="358.0" prefHeight="42.0" prefWidth="600.0" spacing="15.0" style="-fx-background-color: #f9dcc4;">
          <children>
             <TextField fx:id="messageTextField" prefHeight="26.0" prefWidth="497.0" />
-            <Button mnemonicParsing="false" text="Send" onMouseClicked="#sendMess"/>
+            <Button mnemonicParsing="false" onMouseClicked="#sendMess" text="Send" />
          </children>
       </HBox>
       <ScrollPane fx:id="scroll" layoutY="42.0" prefHeight="316.0" prefWidth="600.0">
-         <VBox fx:id="oneMess" layoutY="42.0" prefHeight="79.0" prefWidth="600.0">
+         <VBox fx:id="oneMess" alignment="TOP_CENTER" layoutX="2.0" layoutY="42.0" prefHeight="267.0" prefWidth="596.0">
             <padding>
                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
             </padding>
