--- a/src/main/resources/static/fxml/messageVIew.fxml
+++ b/src/main/resources/static/fxml/messageVIew.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.VBox?>
 
 
-
-<VBox fx:id="oneMess" layoutY="42.0" prefHeight="79.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.MessageViewController">
-    <children>
-        <Label fx:id="content" wrapText="true"/>
-    </children>
+<VBox fx:id="oneMess" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.codingweek.controller.MessageViewController">
+   <children>
+        <Label fx:id="content" wrapText="true" />
+   </children>
 </VBox>
